//Protocolizer 29/04/2017 15:03:40
//This class has been generated automatically, please DO NOT EDIT!
//For any question, feel free to contact me at: oscar.galeraa@gmail.com
syntax = "proto2";

option java_package = "com.ad.connector.protobuf";

option java_outer_classname = "Anuncio";


message AnuncioReq {
    required string idAnuncio = 1;
}

message DefinicionAnuncio {
    required string idioma = 1;
    required TipoAnuncio tipoAnuncio = 2;
    required VerCuadro verCuadro = 3;
    optional string titulo = 4;
    optional string descripcion = 5;
    optional bool descripcionHTML = 6;
    optional string imagen = 7;
    optional string linkHTML = 8;
}

message AnuncioRes {
    repeated DefinicionAnuncio anuncios = 1;
}

enum TipoAnuncio {
    POPUP = 0;
    EN_MARCO = 1;
    PANTALLA_COMPLETA = 2;
}

enum VerCuadro {
    SE_IDENTIFICA = 0;
}
